course-about section language change

--- a/index.html
+++ b/index.html
@@ -61,22 +61,14 @@
          </section>
          <section class="about">
             <div class="container">
-               <h2 class="about__title section-title">О курсе</h2>
+               <h2 class="about__title section-title">Kurs haqqında</h2>
                <div class="about-top">
                   <div class="about-top__left">
                      <p class="about-top__text">
-                        Порой фильмы устроены сложнее четырёхтомных романов. Но
-                        читать книги учат со школы, а смотреть кино — нет. При
-                        этом без подготовки бывает трудно получить от просмотра
-                        удовольствие.
+                        Bəzən filmlər dördcildlik romanlardan daha mürəkkəb olur. Amma kitab oxumaq məktəbdən öyrədilir, filmə baxmaq isə yox. Eyni zamanda, hazırlıq olmadan izləməkdən həzz almaq çətin ola bilər.
                      </p>
                      <p class="about-top__text">
-                        На курсе из 8 занятий научимся быть осознанными
-                        зрителями. Познакомимся с этапами кинопроизводства и
-                        узнаем, как смотреть кино глазами сценариста, режиссёра
-                        и монтажёра. Разберёмся в особенностях жанров и
-                        рассмотрим важнейшие картины, от «Гражданина Кейна» до
-                        «Матрицы».
+                        8 dərslik kursda biz şüurlu tamaşaçı olmağı öyrənəcəyik. Filmin istehsal mərhələləri ilə tanış olacağıq və filmə ssenari müəllifinin, rejissorun və redaktorun gözü ilə baxmağı öyrənəcəyik. Biz janrların xüsusiyyətlərini anlayacağıq və Citizen Kane-dən The Matrix-ə qədər ən vacib rəsmləri nəzərdən keçirəcəyik.
                      </p>
                   </div>
                   <div class="about-top__right">
