fix: about-item language change

--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
                   <div class="about-bottom__right">
                      <div class="about-items">
                         <div class="about-item">
-                           <h4 class="about-item__title">8 занятий</h4>
+                           <h4 class="about-item__title">8 dərs</h4>
                            <p class="about-item__text">
-                              Для погружения в кинематограф
+                              Özünüzü kinoya atmaq üçün
                            </p>
                         </div>
                         <div class="about-item">
-                           <h4 class="about-item__title">2 часа</h4>
+                           <h4 class="about-item__title">2 saat</h4>
                            <p class="about-item__text">
-                              Длительность каждого занятия
+                              Hər dərsin müddəti
                            </p>
                         </div>
                         <div class="about-item">
-                           <h4 class="about-item__title">3 недели</h4>
-                           <p class="about-item__text">Длительность курса</p>
+                           <h4 class="about-item__title">3 həftə</h4>
+                           <p class="about-item__text">Kursun müddəti</p>
                         </div>
                      </div>
                   </div>
