fix: format section language change

--- a/index.html
+++ b/index.html
@@ -112,26 +112,24 @@
          </section>
          <section class="format">
             <div class="container">
-               <h2 class="format__title section-title">Формат занятий</h2>
+               <h2 class="format__title section-title">Sinif formatı</h2>
                <div class="format-container">
                   <div class="format-item format-item_1">
-                     <h4 class="format-item__title">Вебинары</h4>
+                     <h4 class="format-item__title">Vebinarlar</h4>
                      <p class="format-item__text">
-                        Занятия проходят онлайн в режиме вебинаров <br />
-                        с преподавателем
+                        Dərslər müəllimlə <br> vebinar rejimində onlayn keçirilir
                      </p>
                   </div>
                   <div class="format-item format-item_2">
-                     <h4 class="format-item__title">Доступ навсегда</h4>
+                     <h4 class="format-item__title">Əbədi giriş</h4>
                      <p class="format-item__text">
-                        Если вы не успели на вебинар, всегда можете посмотреть
-                        запись в личном кабинете
+                        Vebinarı qaçırmısınızsa, hər zaman şəxsi hesabınızda yazıya baxa bilərsiniz
                      </p>
                   </div>
                   <div class="format-item format-item_3">
-                     <h4 class="format-item__title">Общение</h4>
+                     <h4 class="format-item__title">Ünsiyyət</h4>
                      <p class="format-item__text">
-                        Вы можете задать вопрос преподавателю на занятии
+                        Sinifdə müəllimə sual verə bilərsiniz
                      </p>
                   </div>
                </div>
