fix: what section language change

--- a/index.html
+++ b/index.html
@@ -137,32 +137,28 @@
          </section>
          <section class="what">
             <div class="container">
-               <h2 class="what__title section-title">Что узнаем</h2>
+               <h2 class="what__title section-title">Nə öyrənirik?</h2>
                <ul class="what-list">
                   <li class="what-list__item">
-                     Кто чем занят в съёмочной группе;
+                     Çəkiliş qrupunda kim nə edir?;
                   </li>
                   <li class="what-list__item">
-                     На какие этапы делится кинопроизводство;
+                     Film istehsalı hansı mərhələlərdən ibarətdir?;
                   </li>
                   <li class="what-list__item">
-                     Как выглядит сценарий фильма и как он меняется <br />
-                     по ходу съёмок;
+                     Filmin ssenarisi necə görünür və çəkiliş zamanı necə dəyişir?;
                   </li>
                   <li class="what-list__item">
-                     Какими методами режиссёры заставляют нас смеяться, плакать
-                     и грустить;
+                     Rejissorlar bizi hansı üsullarla güldürür, ağladır, kədərləndirir?;
                   </li>
                   <li class="what-list__item">
-                     Как построение кадра, музыка и свет помогают считывать
-                     заложенные в фильм смыслы;
+                     Çərçivənin qurulması kimi musiqi və işıq filmə xas olan mənaları oxumağa kömək edir?;
                   </li>
                   <li class="what-list__item">
-                     Какие жанры есть в кино и как от них зависит работа
-                     операторов, осветителей и монтажёров;
+                     Kinoda hansı janrlar var və operatorların, işıqlandırmanın və redaktorların işi onlardan necə asılıdır?;
                   </li>
                   <li class="what-list__item">
-                     Как, зная всё это, понимать, о чем фильм.
+                     Bütün bunları bilməklə, filmin nədən bəhs etdiyini necə başa düşmək olar.
                   </li>
                </ul>
             </div>
