fix: program section language change

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
          </section>
          <section class="program">
             <div class="container">
-               <h2 class="program__title section-title">Программа курса</h2>
+               <h2 class="program__title section-title">Kurs proqramı</h2>
             </div>
             <div class="container-bg">
                <div class="program-items">
@@ -176,9 +176,9 @@
                         class="program__img"
                      />
                      <div class="program-content">
-                        <h4 class="program-item__title">1. Как создают кино</h4>
-                        <p class="program-item__text">8 сентября 20:00</p>
-                        <p class="program-item__text">Данила Кузнецов</p>
+                        <h4 class="program-item__title">1. Kino necə hazırlanır?</h4>
+                        <p class="program-item__text">8 sentyabr 20:00</p>
+                        <p class="program-item__text">Danila Kuznetsov</p>
                      </div>
                   </div>
                   <div class="program-item">
@@ -189,10 +189,10 @@
                      />
                      <div class="program-content">
                         <h4 class="program-item__title">
-                           2. Взгляд драматурга
+                           2. Dramaturqun görünüşü
                         </h4>
-                        <p class="program-item__text">10 сентября 20:00</p>
-                        <p class="program-item__text">Данила Кузнецов</p>
+                        <p class="program-item__text">10 sentyabr 20:00</p>
+                        <p class="program-item__text">Danila Kuznetsov</p>
                      </div>
                   </div>
                   <div class="program-item">
@@ -202,9 +202,9 @@
                         class="program__img"
                      />
                      <div class="program-content">
-                        <h4 class="program-item__title">3. Взгляд режиссёра</h4>
-                        <p class="program-item__text">13 сентября 13:00</p>
-                        <p class="program-item__text">Данила Кузнецов</p>
+                        <h4 class="program-item__title">3. Direktorun görüşü</h4>
+                        <p class="program-item__text">13 sentyabr saat 13:00</p>
+                        <p class="program-item__text">Danila Kuznetsov</p>
                      </div>
                   </div>
                   <div class="program-item">
@@ -214,9 +214,9 @@
                         class="program__img"
                      />
                      <div class="program-content">
-                        <h4 class="program-item__title">4. Взгляд монтажёра</h4>
-                        <p class="program-item__text">15 сентября 20:00</p>
-                        <p class="program-item__text">Данила Кузнецов</p>
+                        <h4 class="program-item__title">4. Redaktorun görüşü</h4>
+                        <p class="program-item__text">15 sentyabr 20:00</p>
+                        <p class="program-item__text">Danila Kuznetsov</p>
                      </div>
                   </div>
                   <div class="program-item">
@@ -226,9 +226,9 @@
                         class="program__img"
                      />
                      <div class="program-content">
-                        <h4 class="program-item__title">5. Жанры в кино</h4>
-                        <p class="program-item__text">17 сентября 20:00</p>
-                        <p class="program-item__text">Данила Кузнецов</p>
+                        <h4 class="program-item__title">5. Filmlərdəki janrlar</h4>
+                        <p class="program-item__text">17 sentyabr 20:00</p>
+                        <p class="program-item__text">Danila Kuznetsov</p>
                      </div>
                   </div>
                   <div class="program-item">
@@ -239,10 +239,10 @@
                      />
                      <div class="program-content">
                         <h4 class="program-item__title">
-                           6. Язык кино. Семинар
+                           6. Kino dili. Seminar
                         </h4>
-                        <p class="program-item__text">20 сентября 13:00</p>
-                        <p class="program-item__text">Данила Кузнецов</p>
+                        <p class="program-item__text">20 sentyabr saat 13:00</p>
+                        <p class="program-item__text">Danila Kuznetsov</p>
                      </div>
                   </div>
                   <div class="program-item">
@@ -253,10 +253,10 @@
                      />
                      <div class="program-content">
                         <h4 class="program-item__title">
-                           7. Взгляд кинокритика
+                           7. Kino tənqidçisinin baxışı
                         </h4>
-                        <p class="program-item__text">21 сентября 19:00</p>
-                        <p class="program-item__text">Дмитрий Скворцов</p>
+                        <p class="program-item__text">21 sentyabr 19:00</p>
+                        <p class="program-item__text">Dmitri Skvortsov</p>
                      </div>
                   </div>
                   <div class="program-item">
@@ -267,10 +267,10 @@
                      />
                      <div class="program-content">
                         <h4 class="program-item__title">
-                           8. Осознанный зритель. Семинар
+                           8. Şüurlu tamaşaçı. Seminar
                         </h4>
-                        <p class="program-item__text">22 сентября 19:00</p>
-                        <p class="program-item__text">Дмитрий Скворцов</p>
+                        <p class="program-item__text">22 sentyabr 19:00</p>
+                        <p class="program-item__text">Dmitri Skvortsov</p>
                      </div>
                   </div>
                </div>
