--- a/index.html
+++ b/index.html
@@ -279,17 +279,11 @@
          <section class="achievement">
             <div class="container">
                <h2 class="achievement__title section-title">
-                  Курс прошло уже 1616 человек
+                  Artıq 1616 nəfər kursu keçib
                </h2>
                <div class="achievement-card">
                   <p class="achievement-card__text">
-                     Курс профессионально подготовлен, изложение материала
-                     весьма доступное, благодаря прекрасному изложению лекторов
-                     и демонстрации примеров. А наличие домашних заданий
-                     позволяет закрепить все полученные знания на практике.
-                     Теперь другими глазами смотрю фильмы, считываю не только
-                     сюжет , но и могу оценить работу режиссера, оператора,
-                     монтажера и т.д. Спасибо!
+                     Kurs peşəkar şəkildə hazırlanmışdır, mühazirəçilərin mükəmməl təqdimatı və nümunələrin nümayişi sayəsində materialın təqdimatı çox əlçatandır. Və ev tapşırığının olması praktikada əldə edilən bütün bilikləri birləşdirməyə imkan verir. İndi filmlərə fərqli gözlə baxıram, təkcə süjeti oxumuram, həm də rejissorun, operatorun, redaktorun və s. işinə qiymət verə bilirəm. Çox sağ olun!
                   </p>
                   <div class="achievement-card-profil">
                      <img
@@ -299,7 +293,7 @@
                      />
                      <div class="achievement-card__content">
                         <h3 class="achievement-card__name">
-                           Екатерина Палехова
+                           Yekaterina Palexova
                         </h3>
                         <img
                            class="achievement-card__fb"
