fix: start section language change

--- a/index.html
+++ b/index.html
@@ -308,23 +308,21 @@
          <section class="start">
             <div class="container">
                <h2 class="start__title section-title">
-                  Начало курса — 8 сентября
+                  Kursun başlanğıcı - 8 sentyabr
                </h2>
-               <p class="text1">Стоимость</p>
-               <p class="text2">3900 руб.</p>
+               <p class="text1">Qiymət</p>
+               <p class="text2">3900$.</p>
                <div class="start-wrapper">
                   <div class="start-item">
-                     <h4 class="start-item__title">Для любого уровня</h4>
+                     <h4 class="start-item__title">İstənilən səviyyə üçün</h4>
                      <p class="start-item__text">
-                        Курс подходит и тем, кто начинает «с нуля», и тем, кто
-                        хочет упорядочить имеющиеся знания.
+                        Kurs sıfırdan başlayanlar və biliklərini təkmilləşdirmək istəyənlər üçün uyğundur.
                      </p>
                   </div>
                   <div class="start-item">
-                     <h4 class="start-item__title">Проходите сейчас</h4>
+                     <h4 class="start-item__title">İndi keç</h4>
                      <p class="start-item__text">
-                        Если вы не успели на вебинар, всегда можете посмотреть
-                        запись в личном кабинете
+                        Vebinarı qaçırmısınızsa, hər zaman şəxsi hesabınızda yazıya baxa bilərsiniz.
                      </p>
                   </div>
                </div>
