fix: footer section language change

--- a/index.html
+++ b/index.html
@@ -347,16 +347,16 @@
                </div>
                <div class="footer-right">
                   <a href="tel:74993914639" class="footer-right__tel"
-                     >+7 (499) 39-146-39</a
+                     >+994 (51) 505 55 55</a
                   >
                   <a
                      href="mailto:hello@synchronize.ru"
                      class="footer-right__mail"
-                     >hello@synchronize.ru</a
+                     >hello@synchrone.com</a
                   >
                </div>
             </div>
-            <p class="footer-left__company">© Синхронизация, 2020</p>
+            <p class="footer-left__company">© Syncronization, 2020</p>
          </div>
       </footer>
    </body>
